--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Windows Up-to-Date</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico" />
+      <title>Windows Up-to-Date</title>
+   </head>
+   <body>
+      <noscript>
+         <strong
+            >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
+            properly without JavaScript enabled. Please enable it to
+            continue.</strong
+         >
+      </noscript>
+      <div id="app"></div>
+      <!-- built files will be auto injected -->
+   </body>
 </html>
